welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:19: error: '(' expected but identifier found.
if estFaceMur() == true {
   ^