welcome.lessons.welcome.loopwhile.WhileMoria.scala.code

	




droite();
droite();	

while (estSurBiscuit()!= true && estDosMur() == false) {


while (estSurBiscuit()!= true && estFaceMur() == false ) {
	
	
     avance();
}
if estFaceMur() == true {
droite()
avance()
gauche()
avance()	
}
 
prendBiscuit()
gauche()
gauche()
while (estSurBiscuit()!= true ){
	avance();
}
recule();
poseBiscuit();


recule();

droite();
droite();
}
droite()
avance()
gauche()
avance()
